<resources>
    <string name="app_name">電費計算機</string>
    <string name="str1">請輸入以下資料後送出：</string>
    <string name="str2">伏特（V）：</string>
    <string name="str3">安培（A）：</string>
    <string name="str4">每天使用時數：</string>
    <string name="str5">每度電費：</string>
    <string name="str6">計算電器每月電費</string>
    <string name="str7">月皆以 30 天計算</string>
    <string-array name="option_vs">
        <item>110V</item>
        <item>220V</item>
    </string-array>
</resources>
